--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.0",
+    "react-toastify": "^10.0.5",
     "react-webcam": "^7.2.0"
   },
   "devDependencies": {
