--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@reduxjs/toolkit": "^2.2.6",
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
+    "chart.js": "^4.4.4",
     "react": "^18.3.1",
+    "react-calendar": "^5.0.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
